# omd_test_task

./: .gitignore  LICENSE  README.md  docker-compose.yml
output/: DetMir.json  Product.json
src/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  task_1.py
src/alembic/versions/: 2024_09_03_1508-d946b3625d60_add_models.py
src/app/: check_db.py  task_1.py  task_2.py
src/app/database/: container.py  db.py  models.py
src/app/database/dals/: detmir_dal.py  product_dal.py
src/app/database/services/: detmir_service.py  product_service.py
src/app/parsers/: detmir_parser.py  perecrestok_parser.py
src/app/scripts/: format_perecrestok_data.py  save_detmir_to_db.py
src/app/utils/: perecrestok_formatter.py
