[tool.poetry]
name = "parsing"
version = "0.1.0"
description = ""
authors = ["Lockerio <goryunov.arkadiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.24.0"
requests = "^2.32.3"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
